--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vime/core": "^5.3.3",
+    "@vime/react": "^5.3.3",
     "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
