--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.8",
+    "antd": "^4.23.4",
     "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
