--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@date-io/dayjs": "^2.16.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@headlessui/react": "^1.7.3",
     "@mui/lab": "^5.0.0-alpha.104",
     "@mui/material": "^5.10.9",
     "@mui/x-date-pickers": "^5.0.5",
