--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "next": "12.3.0",
     "nookies": "^2.5.2",
     "react": "18.2.0",
