--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.7.3",
+    "@material-tailwind/html": "^1.2.3",
+    "@material-tailwind/react": "^1.2.4",
     "@mui/lab": "^5.0.0-alpha.104",
     "@mui/material": "^5.10.9",
     "@mui/x-date-pickers": "^5.0.5",
